# ninkasi_c

./: AUTHORS  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.old  crap1  crap2  fwee.m  ltmain.sh  octave-core  penmp  run_configure  run_configure.org  run_configure_centos6_actpol  run_configure_centos6_actpol_nofftw  run_configure_centos6_myactpol_nofftw  run_configure_cita  run_configure_gcc  run_configure_gcc_goto  run_configure_gcc_goto_zirfile  run_configure_gcc_mkl  run_configure_gcc_mkl2  run_configure_icc
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.2t  traces.3
include/: astro.h  astro.h~  clapack.h~  dirfile.h  dirfile.h~  dirfile_matlab.h  getdata.h  iers_bulletin_a.h  mbCommon.h  mbCommon.h~  mbCuts.h  mbCuts.h~  mbTOD.h  mbTOD.h~  ninkasi.h  ninkasi.h~  ninkasi_config.h  ninkasi_defs.h  ninkasi_defs.h~  ninkasi_mathutils.h  ninkasi_mathutils.h~  ninkasi_pointing.h  ninkasi_pointing.h~  ninkasi_projection.h  ninkasi_projection.h~  ninkasi_projection_types.h  ninkasi_projection_types.h~  ninkasi_types.h  ninkasi_types.h~  nk_clapack.h  nk_clapack.h~  noise.h  noise.h~  noise_types.h  noise_types.h~  parse_strings.h  parse_strings.h~  ps_stuff.h  ps_stuff.h~  readtod.h
matlab/: good_dets.mat  read_tod.m~
src/: Makefile.am  Makefile.am.found  Makefile.am.gcc  Makefile.am.gcc_niagara  Makefile.am.icc  Makefile.in  Makefile_auto  Makefile_libs  astro.c  astro.c.bak  bullet_crud.scr  check_endian  check_endian.c  clapack.c  common_mode.c  dirfile.c  dirfile_cpp.h  find_az_interp_points.m  getdata.c  (+43 more)
(+21 files in other folders)
